tdf#126369 Invalidate edit view after removing hyperlink

Change-Id: I715c0de52a7eb27e8eb3848d99006addf0b90695
Reviewed-on: https://gerrit.libreoffice.org/76982
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>